--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -141,6 +141,7 @@ extraObjects:
           - workdays
         group_by:
           - namespace
+          - severity
         matchers:
           - severity != none
         receiver: discord
