chore(haproxy): block the motherfucker who spams my personal server

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -64,6 +64,9 @@ frontend https
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
   http-request set-var(txn.req_hdrs) req.hdrs
 
+  acl block_subnet src -f /etc/haproxy/blocked_subnets.lst
+  http-request silent-drop if block_subnet
+
   filter cache hacache
   http-request cache-use hacache
   http-response cache-store hacache
