chore(haproxy): use cf-connecting-ip for real client IP

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - name: Run Ansible playbook
         run: |
-          ansible-playbook newsletter-server/main.yml -vv
+          ansible-playbook newsletter-server/main.yml
 
   helmwave:
     runs-on: self-hosted
