--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -71,9 +71,9 @@ frontend https
   http-request cache-use hacache
   http-response cache-store hacache
 
-  stick-table type ip size 1m expire 60s store http_req_rate(60s)
+  stick-table type ip size 1m expire 30d store http_req_rate(300s)
   http-request track-sc0 src
-  http-request deny deny_status 429 if { sc_http_req_rate(0) gt 60 }
+  http-request deny deny_status 429 if { sc_http_req_rate(0) gt 10 }
 
   acl newsletter hdr(host) -i newsletter.developer-friendly.blog
   use_backend k8s if newsletter
