chore(haproxy): loosen the rate-limit for admin access

--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -180,6 +180,7 @@ extraObjects:
           - group_by:
               - email
               - subscription_status
+            group_interval: 30s
             matchers:
               - severity = info
             receiver: slack-info
