feat: deploy kratos

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -81,6 +81,9 @@ frontend https
   acl alertmanager hdr(host) -i alertmanager.developer-friendly.blog
   use_backend k8s if alertmanager
 
+  acl auth hdr(host) -i auth.developer-friendly.blog auth-server.developer-friendly.blog
+  use_backend k8s if auth
+
   default_backend default_backend
 
 backend k8s
