chore(haproxy): add the rules for the new auth server

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -81,8 +81,9 @@ frontend https
   acl alertmanager hdr(host) -i alertmanager.developer-friendly.blog
   use_backend k8s if alertmanager
 
-  acl auth hdr(host) -i auth.developer-friendly.blog auth-server.developer-friendly.blog
-  use_backend k8s if auth
+  acl auth hdr(host) -i auth.developer-friendly.blog
+  acl auth_server hdr(host) -i auth-server.developer-friendly.blog
+  use_backend k8s if auth || auth_server
 
   default_backend default_backend
 
