--- a/kubernetes/newsletter-server/helm-releases/helmwave.yml
+++ b/kubernetes/newsletter-server/helm-releases/helmwave.yml
@@ -8,6 +8,8 @@ repositories:
     name: victoria-metrics
   - url: https://grafana.github.io/helm-charts
     name: grafana
+  - url: https://yonahd.github.io/kor
+    name: kor
 
 registries:
   - host: ghcr.io
@@ -54,4 +56,12 @@ releases:
       - ./helm-values/promtail.yml
     depends_on:
       - victoria-metrics-k8s-stack
+    <<: *options
+  - name: kor
+    namespace: kube-system
+    chart:
+      name: kor/kor
+      version: 0.1.x
+    values:
+      - ./helm-values/kor.yml
     <<: *options
