--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -67,6 +67,9 @@ frontend https
   acl block_subnet src -f /etc/haproxy/blocked_subnets.lst
   http-request silent-drop if block_subnet
 
+  acl shady_user_agent hdr_sub(User-Agent) -i -f /etc/haproxy/shady_user_agents.lst
+  http-request silent-drop if shady_user_agent
+
   filter cache hacache
   http-request cache-use hacache
   http-response cache-store hacache
