fix(haproxy): match the block subnets against real client IP

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -64,8 +64,9 @@ frontend https
   http-request set-var(txn.req_hdrs) req.hdrs
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
 
-  acl block_subnet src -f /etc/haproxy/blocked_subnets.lst
-  http-request silent-drop if block_subnet
+  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
+  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
+  http-request silent-drop if block_cf_ip or block_xff_ip
 
   acl shady_user_agent hdr_sub(User-Agent) -i -f /etc/haproxy/shady_user_agents.lst
   http-request silent-drop if shady_user_agent
