--- a/applications/oathkeeper/deployment-oathkeeper-maester.yml
+++ b/applications/oathkeeper/deployment-oathkeeper-maester.yml
@@ -1,15 +1,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: oathkeeper-maester
   labels:
-    app.kubernetes.io/instance: oathkeeper-maester
     app.kubernetes.io/component: oathkeeper-maester
+    app.kubernetes.io/instance: oathkeeper-maester
+  name: oathkeeper-maester
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: oathkeeper-maester
       app.kubernetes.io/component: oathkeeper-maester
+      app.kubernetes.io/instance: oathkeeper-maester
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -18,22 +18,23 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: oathkeeper-maester
         app.kubernetes.io/component: oathkeeper-maester
+        app.kubernetes.io/instance: oathkeeper-maester
     spec:
       automountServiceAccountToken: true
       containers:
         - args:
-            - --metrics-addr=0.0.0.0:8080 controller \
-            - --rulesConfigmapName=oathkeeper-rules \
-            - --rulesConfigmapNamespace=$(POD_NAMESPACE)
+            - "--metrics-addr=0.0.0.0:8080"
+            - controller
+            - "--rulesConfigmapName=oathkeeper-rules"
+            - "--rulesConfigmapNamespace=$(POD_NAMESPACE)"
+          command:
+            - /manager
           env:
             - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          command:
-            - /manager
           image: oryd/oathkeeper-maester
           name: oathkeeper-maester
           ports:
@@ -61,6 +62,46 @@ spec:
               level: s0:c123,c456
             seccompProfile:
               type: RuntimeDefault
+      initContainers:
+        - command:
+            - /bin/sh
+            - "-c"
+            - |
+              cm=$(kubectl get configmap oathkeeper-rules -n $POD_NAMESPACE -o jsonpath='{.metadata.name}' 2>/dev/null || true)
+
+              if [ -z "$cm" ]; then
+                cat <<'EOF' > access-rules.json
+              []
+              EOF
+                kubectl create configmap oathkeeper-rules --from-file=access-rules.json -n $POD_NAMESPACE
+              else
+                echo "ConfigMap/oathkeeper-rules already present"
+              fi
+          env:
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          image: bitnami/kubectl
+          name: initial-rules
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            privileged: false
+            readOnlyRootFilesystem: true
+            runAsGroup: 65534
+            runAsNonRoot: true
+            runAsUser: 65534
+            seLinuxOptions:
+              level: s0:c123,c456
+            seccompProfile:
+              type: RuntimeDefault
+          volumeMounts:
+            - mountPath: /tmp
+              name: tmp
+          workingDir: /tmp
       securityContext:
         fsGroup: 65534
         fsGroupChangePolicy: OnRootMismatch
@@ -71,3 +112,6 @@ spec:
           type: RuntimeDefault
       serviceAccountName: oathkeeper-maester
       terminationGracePeriodSeconds: 120
+      volumes:
+        - emptyDir: {}
+          name: tmp
