chore(haproxy): get more defensive using the ipsum bad reputation IP list

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -54,6 +54,16 @@ frontend stats
 frontend http
   bind :80
 
+  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
+  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
+  acl my_block_direct_ip src -f /etc/haproxy/blocked_subnets.lst
+  http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
+
+  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
+  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
+  acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
+  http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
+
   redirect scheme https code 301 if !{ ssl_fc }
 
   default_backend default_backend
@@ -64,9 +74,15 @@ frontend https
   http-request set-var(txn.req_hdrs) req.hdrs
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
 
-  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
-  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
-  http-request silent-drop if block_cf_ip or block_xff_ip
+  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
+  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
+  acl my_block_direct_ip src -f /etc/haproxy/blocked_subnets.lst
+  http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
+
+  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
+  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
+  acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
+  http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
 
   acl shady_user_agent hdr_sub(User-Agent) -i -f /etc/haproxy/shady_user_agents.lst
   http-request silent-drop if shady_user_agent
