--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -54,15 +54,21 @@ frontend stats
 frontend http
   bind :80
 
-  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
-  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
-  acl my_block_direct_ip src -f /etc/haproxy/blocked_subnets.lst
+  http-request set-var(txn.req_hdrs) req.hdrs
+  log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
+
+  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
+  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
+  acl my_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
   http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
 
   acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
   acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
   acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
   http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
+
+  acl shady_user_agent hdr_sub(user-agent) -i -f /etc/haproxy/shady_user_agents.lst
+  http-request silent-drop if shady_user_agent
 
   redirect scheme https code 301 if !{ ssl_fc }
 
@@ -74,9 +80,9 @@ frontend https
   http-request set-var(txn.req_hdrs) req.hdrs
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
 
-  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocked_subnets.lst
-  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocked_subnets.lst
-  acl my_block_direct_ip src -f /etc/haproxy/blocked_subnets.lst
+  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
+  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
+  acl my_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
   http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
 
   acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
@@ -84,8 +90,10 @@ frontend https
   acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
   http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
 
-  acl shady_user_agent hdr_sub(User-Agent) -i -f /etc/haproxy/shady_user_agents.lst
+  acl shady_user_agent hdr_sub(user-agent) -i -f /etc/haproxy/shady_user_agents.lst
   http-request silent-drop if shady_user_agent
+
+  http-response set-header Strict-Transport-Security "max-age=16000000; includeSubDomains; preload;"
 
   filter cache hacache
   http-request cache-use hacache
