chore(haproxy): block spamming host and more IP addresses

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -57,22 +57,23 @@ frontend http
   http-request set-var(txn.req_hdrs) req.hdrs
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
 
-  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
-  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
-  acl my_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
-  http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
+  acl local_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_host hdr(host) -i -f /etc/haproxy/blocklist_hosts.lst
+  http-request silent-drop if local_block_cf_ip or local_block_xff_ip or local_block_direct_ip or local_block_host
 
-  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
-  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
-  acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
-  http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
+  acl global_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
+  acl global_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
+  acl global_block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
+  http-request silent-drop if global_block_cf_ip or global_block_xff_ip or global_block_direct_ip
 
   acl shady_user_agent hdr_sub(user-agent) -i -f /etc/haproxy/shady_user_agents.lst
   http-request silent-drop if shady_user_agent
 
   redirect scheme https code 301 if !{ ssl_fc }
 
-  default_backend default_backend
+  default_backend not_found
 
 frontend https
   bind :443 ssl crt /etc/haproxy/certs/ alpn h2,http/1.1
@@ -80,15 +81,16 @@ frontend https
   http-request set-var(txn.req_hdrs) req.hdrs
   log-format "${HAPROXY_HTTP_LOG_FMT} hdrs:%{+Q}[var(txn.req_hdrs)]"
 
-  acl my_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
-  acl my_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
-  acl my_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
-  http-request silent-drop if my_block_cf_ip or my_block_xff_ip or my_block_direct_ip
+  acl local_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_direct_ip src -f /etc/haproxy/blocklist_ips.lst
+  acl local_block_host hdr(host) -i -f /etc/haproxy/blocklist_hosts.lst
+  http-request silent-drop if local_block_cf_ip or local_block_xff_ip or local_block_direct_ip or local_block_host
 
-  acl block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
-  acl block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
-  acl block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
-  http-request silent-drop if block_cf_ip or block_xff_ip or block_direct_ip
+  acl global_block_cf_ip hdr_ip(cf-connecting-ip) -f /etc/haproxy/bad_reputation_ips.lst
+  acl global_block_xff_ip hdr_ip(x-forwarded-for) -f /etc/haproxy/bad_reputation_ips.lst
+  acl global_block_direct_ip src -f /etc/haproxy/bad_reputation_ips.lst
+  http-request silent-drop if global_block_cf_ip or global_block_xff_ip or global_block_direct_ip
 
   acl shady_user_agent hdr_sub(user-agent) -i -f /etc/haproxy/shady_user_agents.lst
   http-request silent-drop if shady_user_agent
@@ -113,12 +115,12 @@ frontend https
   acl auth_server hdr(host) -i auth-server.developer-friendly.blog
   use_backend k8s if auth || auth_server
 
-  default_backend default_backend
+  default_backend not_found
 
 backend k8s
   option httpchk GET / HTTP/1.1
   http-check send hdr Host newsletter.developer-friendly.blog
   server k8s 127.0.0.1:81 check inter 2000 rise 1 fall 3
 
-backend default_backend
+backend not_found
   http-request deny deny_status 404
