feat: deploy kor with in-house kustomization as their chart sucks

--- a/ansible/newsletter-server/haproxy.cfg
+++ b/ansible/newsletter-server/haproxy.cfg
@@ -115,6 +115,10 @@ frontend https
   acl auth_server hdr(host) -i auth-server.developer-friendly.blog
   use_backend k8s if auth || auth_server
 
+  acl vmsingle hdr(host) -i vmsingle.developer-friendly.blog
+  acl vmagent hdr(host) -i vmagent.developer-friendly.blog
+  use_backend k8s if vmsingle || vmagent
+
   default_backend not_found
 
 backend k8s
