chore(helm): create dependency from VM stack to ES

--- a/kubernetes/newsletter-server/helm-releases/helmwave.yml
+++ b/kubernetes/newsletter-server/helm-releases/helmwave.yml
@@ -27,6 +27,8 @@ releases:
       version: 0.10.x
     values:
       - ./helm-values/external-secrets.yml
+    tags:
+      - external-secrets
     <<: *options
   - name: grafana-operator
     namespace: monitoring
@@ -44,6 +46,7 @@ releases:
         renderer: copy
     depends_on:
       - grafana-operator
+      - external-secrets@external-secrets
     <<: *options
   - name: promtail
     namespace: monitoring
