--- a/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/victoria-metrics-k8s-stack.yml
@@ -153,7 +153,7 @@ extraObjects:
           - active_time_intervals:
               - everyday
             matchers:
-              - severity =~ error|critical
+              - severity =~ warning|error|critical
             receiver: slack
             repeat_interval: 1h
       time_intervals:
