--- a/applications/kor/exporter-deployment.yml
+++ b/applications/kor/exporter-deployment.yml
@@ -3,16 +3,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kor-exporter
+  labels:
+    app.kubernetes.io/component: kor-exporter
+    app.kubernetes.io/instance: kor-exporter
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: kor-exporter
+      app.kubernetes.io/instance: kor-exporter
   strategy:
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 0
     type: RollingUpdate
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: kor-exporter
+        app.kubernetes.io/instance: kor-exporter
     spec:
-      automountServiceAccountToken: false
+      automountServiceAccountToken: true
       containers:
         - args:
             - exporter
