chore(haproxy): reload the service on blocklist update

--- a/ansible/newsletter-server/main.yml
+++ b/ansible/newsletter-server/main.yml
@@ -18,6 +18,7 @@
         - shady_user_agents.lst
       tags:
         - haproxy
+      notify: Reload haproxy
     - name: Create bad IP service
       tags:
         - bad-ip
