feat: deploy trivy operator

--- a/applications/kor/cronjob.yml
+++ b/applications/kor/cronjob.yml
@@ -43,7 +43,7 @@ spec:
                   tar xf kor.tar.gz
 
                   for r in $RESOURCES; do
-                    ./kor $r --delete --no-interactive
+                    ./kor $r --delete --no-interactive $KOR_EXTRA_ARGS
                   done
               envFrom:
                 - configMapRef:
