--- a/applications/kor/configs.env
+++ b/applications/kor/configs.env
@@ -1,3 +1,4 @@
 RESOURCES=clusterrole configmap daemonset deployment horizontalpodautoscaler ingress job networkpolicy persistentvolume persistentvolumeclaim pod poddisruptionbudget replicaset role secret service serviceaccount statefulset
 KOR_AMD64=https://github.com/yonahd/kor/releases/download/v0.5.5/kor_Linux_x86_64.tar.gz
 KOR_ARM64=https://github.com/yonahd/kor/releases/download/v0.5.5/kor_Linux_arm64.tar.gz
+KOR_EXTRA_ARGS=--exclude-labels=app.kubernetes.io/name=victoria-metrics-k8s-stack
