chore(trivy): send webhooks to echo-server for now

--- a/kubernetes/newsletter-server/helm-releases/helm-values/trivy-operator.yml
+++ b/kubernetes/newsletter-server/helm-releases/helm-values/trivy-operator.yml
@@ -1,5 +1,7 @@
 ---
 operator:
   scanJobsConcurrentLimit: 1
+  webhookBroadcastURL: http://echo-server.default/trivy
 trivy:
   ignoreUnfixed: true
+  severity: HIGH,CRITICAL
